[gd_scene load_steps=3 format=3 uid="uid://dni1f4a7ssyom"]

[ext_resource type="Script" path="res://uis/task_ui.gd" id="1_ll7om"]
[ext_resource type="Script" path="res://backend_client.gd" id="2_gp4oq"]

[node name="TaskUi" type="Panel"]
custom_minimum_size = Vector2(600, 700)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ll7om")

[node name="BackendClient" type="HTTPRequest" parent="."]
script = ExtResource("2_gp4oq")

[node name="TaskLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 192.0
offset_right = 36.0
offset_bottom = 232.0
grow_horizontal = 2
text = "Task X"
fit_content = true

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 558.0
offset_top = 20.0
offset_right = 575.0
offset_bottom = 51.0
text = "x"

[node name="StatusLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 233.0
offset_top = 554.0
offset_right = 333.0
offset_bottom = 594.0
text = "To Do"

[node name="CompleteButton" type="Button" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 572.0
offset_right = 480.0
offset_bottom = 603.0
text = "Complete"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CompleteButton" to="." method="_on_complete_button_pressed"]
